--- a/client/templates/views/order.pug
+++ b/client/templates/views/order.pug
@@ -24,11 +24,13 @@ html(lang="en")
         //- van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
         //-   van-swipe-item
         //-     img(:src="image")
-        van-search(v-model="search" placeholder="请输入搜索关键词" input-align="center" @input="num = 1;list = []; onLoad()")
-        van-tabs(v-model="tag" @click="num = 1;list = []; onLoad()")
+        van-search(v-model="search" placeholder="请输入搜索关键词" input-align="center" @input="num = 1;list = []; onLoad(true)")
+        van-tabs(v-model="tag" @click="num = 1;list = []; onLoad(true)")
           each item in [{name:'全部', id: 0},{name: "进行中", id: 1},{name: "已完成", id: 2},{name: "已取消", id: 3}]
             van-tab(title=item.name)
               div(:style="secrHeight")
+                van-cell(title="选择查看的日期区间" :value="date" @click="dataShow = true")
+                van-calendar(v-model="dataShow" type="range" @confirm="onConfirm" :min-date="minDate" :max-date="maxDate" allow-same-day="true")
                 //- van-pull-refresh(v-model="refreshing" @refresh="onRefresh")
                 //- van-list(v-model="loading" :finished="finished")
                 van-cell(v-for="item in list" :key="item" @click="page(item.workId)")
